# inga-sdl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.amigaos4  Makefile.mos  README.md
game/: config.json
game-sources/: Workshop.ipf
game-sources/Scripts/: Garten.isf  Haus.isf
game/BitMaps/: ErmGreifenHHinten.ibm  ErmGreifenHLinks.ibm  ErmGreifenHRechts.ibm  ErmGreifenHinten.ibm  ErmGreifenLinks.ibm  ErmGreifenRLinks.ibm  ErmGreifenRRechts.ibm  ErmGreifenRechts.ibm  ErmLaufenHinten.ibm  ErmLaufenLinks.ibm  ErmLaufenRechts.ibm  ErmLaufenVorne.ibm  ErmReden1Hinten.ibm  ErmReden1Links.ibm  ErmReden1Rechts.ibm  ErmReden1Vorne.ibm  ErmStehenHinten.ibm  ErmStehenLinks.ibm  ErmStehenRechts.ibm  ErmStehenVorne.ibm  Esc.ibm  Garten.imp  GegSchluessel.ibm  GlobalPalette.ibm  HafenL.ibm  HafenL.imp  HafenWasserL.ibm  HafenWasserLa.ibm  Haus.ibm  Haus.imp  Inventarleiste.ibm  InventarleisteKnoepfe.ibm  KoeboLaufenLinks.ibm  KoeboLaufenRechts.ibm  KoeboRedenHinten.ibm  KoeboRedenLinks.ibm  KoeboRedenRechts.ibm  KoeboRedenVorne.ibm  KoeboStehenHinten.ibm  KoeboStehenLinks.ibm  (+22 more)
game/Dats/: Garten.ilk  HafenL.ilk  Hauptperson.ipe  Haus.ilk  Koenigsbote.ipe  SkriptShellLog  story.inga  story.itxt
game/Sounds/: SndNehmen.aiff  SndTuer.aiff
legacy/Amiga Sources/: Textausgabe.c  Textausgabe.h  animation.c  animation.h  cache.c  cache.h  device_info.c  device_info.h  dialog.c  dialog.h  elem_felder.c  elem_felder.h  elem_objekte.c  elem_objekte.h  elem_personen.c  elem_personen.h  elem_zierden.c  elem_zierden.h  grafik.c  grafik.h  ingaaudiocd.c  ingaaudiocd.h  ingaplayer.c  ingaplayer.h  ingasound.c  ingasound.h  inventar.c  inventar.h  kernel.c  kernel.h  menu.c  menu.h  sequenzen.c  strukturen.h  vp.c  vp.h
legacy/Dokumentation/: Dateiformat-ByteCode.txt  Dateiformate.txt  Engine-Quellen.txt  VP-Codes.txt
legacy/Kompendium/: addvar.html  akt.html  ani.html  anineh.html  ant.html  cdnum.html  cdsto.html  dia.html  divresvar.html  divvar.html  ein.html  einend.html  entsou.html  escend.html  extade.html  extaos.html  extmac.html  extmos.html  far.html  fel.html  feluns.html  fre.html  holpervar.html  holzei.html  ilkobe.html  ilkunt.html  ina.html  inivar.html  invneh.html  invweg.html  ladbil.html  ladlau.html  ladsou.html  lau.html  laudir.html  lautem.html  lei.html  leiaus.html  lis.html  lisabb.html  (+61 more)
platform/Inga macOS/Inga macOS/: Info.plist
platform/Inga macOS/Inga macOS.xcodeproj/: project.pbxproj
platform/Inga macOS/Inga macOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/Inga macOS/Inga macOS.xcodeproj/project.xcworkspace/xcuserdata/timokloss.xcuserdatad/: UserInterfaceState.xcuserstate
platform/Inga macOS/Inga macOS.xcodeproj/xcshareddata/xcschemes/: Inga.xcscheme
platform/Inga macOS/Inga macOS.xcodeproj/xcuserdata/timokloss.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/macOS/Inga macOS/: Info.plist
platform/macOS/Inga macOS.xcodeproj/: project.pbxproj
platform/macOS/Inga macOS.xcodeproj/xcshareddata/xcschemes/: Inga.xcscheme
sources/: Config.h  Cursor.c  Cursor.h  Dialog.c  Dialog.h  Element.c  Element.h  Enums.h  Fader.c  Fader.h  Font.c  Font.h  Game.c  Game.h  GameConfig.c  GameConfig.h  GameState.c  GameState.h  Global.c  Global.h  Image.c  Image.h  ImageSet.c  ImageSet.h  InventoryBar.c  InventoryBar.h  Location.c  Location.h  Menu.c  Menu.h  NavigationMap.c  NavigationMap.h  SDL_includes.h  Script.c  Script.h  Sequence.c  Sequence.h  SlotList.c  SlotList.h  SoundManager.c  (+8 more)
